--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,74 @@
 }
 
 .nav-logo{
-    margin-top: 10px;
+    margin-top: 12px;
     height: 80px;
 }
 
-
-
-.nav-links{
-    float: right;
-    margin-top: 35px;
-    font-weight: bold;
+header {
     display: flex;
+    justify-content: flex-end;
+}
+
+
+/* Гамбургер иконка */
+.menu-btn {
+    margin-top: 30px;
+    margin-right: 30px;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    z-index:2;
+}
+
+.menu-btn span {
+    width: 30px;
+    height: 5px;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #222222;
+    transition: all 0.5s;
+}
+
+.menu-btn span:nth-of-type(2) {
+    top: calc(50% - 5px);
+}
+.menu-btn span:nth-of-type(3) {
+    top: calc(50% + 5px);
+}
+
+/* Меняем гамбургер иконку, когда меню открыто */
+.menu-btn.active span:nth-of-type(1) {
+    display: none;
+}
+.menu-btn.active span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(45deg);
+}
+.menu-btn.active span:nth-of-type(3) {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(-45deg);
+}
+
+/* Меню, которое будет появляться */
+.menu {
+    position: fixed;
+    padding-top: 100px;
+    width: 100%;
+    height: 100%;
+    background: #FFF;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+}
+
+.menu.active {
+    transform: translateX(0);
+}
+
+.menu li {
+    list-style-type: none;
 }
 
 a.links{
@@ -34,12 +91,23 @@ a.links{
     text-align: center;
 }
 
-.content-part{
-    margin-top: 40px;
-    padding-left: 40px!important;
-    padding-left: 40px!important;
+.button{
+    display: unset;
 }
 
+
 .features-block{
-    margin-top: 50px;
+    margin-top: 50px!important;
+}
+
+.icons{
+    width: 50px;
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: unset;
 }
