--- a/css/main.css
+++ b/css/main.css
@@ -80,17 +80,40 @@ a.links{
     margin-bottom: 50px;
 }
 
+.section{
+    margin-top: 20px;
+    width: 15rem;
+    padding: 20px;
+    border: 2px solid rgb(30 30 36);
+    border-radius: 1.5rem;
+}
+
 .goods-title{
     margin-top: 10px;
     margin-bottom: 25px;
+}
+
+.bedrock{
+    font-family: 'Monda', sans-serif;
+}
+
+.pass-time{
+
+}
+
+.goods-img{
+    width: 150px;
 }
 
 .price{
     margin-top: 20px;
 }
 
+.row{
+    margin-right: 0!important;
+    margin-left: 0!important;
+}
 .footer{
-    height: 100%;
     background-color: #15151b;
 }
 
@@ -137,11 +160,24 @@ a.links{
 
 .categories{
     margin-left: 20px;
-    margin-top: 30px;
+    margin-top: 35px;
 }
 
 .footer-links{
     color: #999;
+}
+
+.payments{
+    display: flex;
+    margin-left: 20px;
+}
+
+.payments-logo{
+    width: 50px;
+}
+
+.extra-height{
+    height: 20px;
 }
 
 
@@ -206,6 +242,10 @@ a.links{
     .menu-btn.active span:nth-of-type(3) {
         top: 50%;
         transform: translate(-50%, 0%) rotate(-45deg);
+    }
+
+    .menu-btn.active{
+        position: fixed;
     }
 
     .menu-burger li {
